--- a/src/components/base.scss
+++ b/src/components/base.scss
@@ -414,6 +414,7 @@ button {
   border: none;
   outline: none;
   font-size: 20px;
+  font-weight: bold;
   line-height: 29px;
   cursor: pointer;
   box-shadow: 0px 0px 6px rgba(20, 20, 20, 0.13);
@@ -425,5 +426,78 @@ button {
 
   &:active {
     background-color: var(--secondary-click);
+  }
+
+  &.error {
+    background-color: var(--error);
+  }
+
+  &.success {
+    background-color: var(--success);
+  }
+}
+
+a {
+  color: var(--secondary);
+  &:hover {
+    color: var(--secondary-hover);
+  }
+
+  &:active,
+  &:visited {
+    color: var(--secondary-click);
+  }
+}
+
+@keyframes shake {
+  from {
+    transform: rotate3d(-5deg);
+  }
+  to {
+    transform: rotate3d(5deg);
+  }
+}
+
+.critter.block[data-selected="true"] {
+  background-color: var(--accent-background);
+  // animation: shake;
+  animation-delay: 0;
+  animation-duration: 0.33s;
+}
+
+.critter.block[data-selected="true"]:nth-child(2n) {
+  animation-name: keyframes1;
+  animation-iteration-count: infinite;
+  transform-origin: 50% 10%;
+}
+
+.critter.block[data-selected="true"]:nth-child(2n-1) {
+  animation-name: keyframes2;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  transform-origin: 30% 5%;
+}
+
+@keyframes keyframes1 {
+  0% {
+    transform: rotate(-1deg);
+    animation-timing-function: ease-in;
+  }
+
+  50% {
+    transform: rotate(1.5deg);
+    animation-timing-function: ease-out;
+  }
+}
+
+@keyframes keyframes2 {
+  0% {
+    transform: rotate(1deg);
+    animation-timing-function: ease-in;
+  }
+
+  50% {
+    transform: rotate(-1.5deg);
+    animation-timing-function: ease-out;
   }
 }
